# graphics-editor

./: README.md
EmailService/: .gitignore  EmailConfiguration.cs  EmailSender.cs  EmailService.csproj  EmailService.sln  IEmailSender.cs  Message.cs
backend/: .gitignore  AppSettings.cs  Program.cs  backend.csproj  backend.sln
backend/Controllers/: AuthController.cs  ProjectController.cs  UsersController.cs
backend/Data/: MongoDBContext.cs
backend/Hubs/: SignalingHub.cs
backend/Models/: AuthToken.cs  Project.cs  User.cs
backend/Properties/: launchSettings.json
backend/Services/: ImageService.cs  S3Service.cs  TokenService.cs
core/: .gitignore  CMakeLists.txt  main.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/Services/: AuthService.ts  SignalRService.ts
frontend/src/components/: Canvas.tsx  FacebookLogin.tsx  Footer.tsx  GoogleLogin.tsx  Hero.tsx  ProjectCard.tsx  ProtectedRoute.tsx  ToolBar.tsx  UploadImage.tsx
frontend/src/contexts/: BaseUrlContext.tsx
frontend/src/pages/: ConfirmEmail.tsx  Dashboard.tsx  DrawingPage.tsx  ForgotPassword.tsx  Home.tsx  Login.tsx  ResetPassword.tsx
